--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -288,7 +288,7 @@
     </div>
 
   </div>
-
+testing
   <ul hidden>
     <li id="a11y-refresh-page-message">{{ 'general.accessibility.refresh_page' | t }}</li>
   </ul>
